# meson-ext-rs

./: Cargo.toml  README.md
examples/: meson_find_ver.rs
src/: config.rs  lib.rs
