[package]
name = "meson-ext-rs"
description = """
A library for building using meson with cross-compilation support
"""
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["SpeedCrash100"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/SpeedCrash100/meson-ext-rs.git"

[dependencies]
semver = "1.0"
thiserror = "2.0"


[dev-dependencies]
anyhow = "1"
